# flipper-tesla-fsd

./: CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HARDWARE.md  README.md  README_zh-CN.md  README_zh-TW.md  ROADMAP.md  SECURITY.md  application.fam  changelog.md  tesla_fsd_app.c  tesla_fsd_app.h
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  car_compatibility.yml  config.yml  feature_request.yml
enhauto-re/: CAN_DICTIONARY.md  COMMANDER_VS_TESLAMOD.md  COMMANDER_WIFI_PANDA.md  COMMANDS.md  README.md
esp32/: README.md  application.fam  platformio.ini
esp32/.firmware/: can_driver.h  config.h  fsd_handler.cpp  led.cpp  led.h  main.cpp
esp32/src/: can_driver.cpp  fsd_handler.h  web_dashboard.cpp  web_dashboard.h  wifi_manager.cpp  wifi_manager.h
fsd_logic/: fsd_handler.c  fsd_handler.h
libraries/: Spi_lib.c  mcp_can_2515.c  mcp_can_2515.h
my/: backup.cpp  can.h  my.cpp  scratch_1.txt
my/ev-open-can-tools/: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  platformio.ini  platformio_profile.h
my/ev-open-can-tools/.devcontainer/: devcontainer.json  post-create.sh
my/ev-open-can-tools/.github/: pull_request_template.md
my/ev-open-can-tools/include/: app.h  can_frame_types.h  can_helpers.h  handlers.h
my/tesla-open-can-mod-release/: .clang-format  .gitlab-ci.yml  CHANGELOG.md  DEPLOYMENT_GUIDE.md  README.md  THIRD_PARTY_LICENSES  flash_esp32.sh  platformio.ini
scenes/: extras.c  fsd_running.c  main_menu.c  settings.c
scenes_config/: app_scene_config.h
tools/: make_demo_gif.py
(+119 files in other folders)
